@@ -4,12 +4,21 @@
 
 package org.chromium.chrome.browser.compositor.layouts.phone;
 
+import static org.chromium.build.NullUtil.assertNonNull;
+import static org.chromium.build.NullUtil.assumeNonNull;
+
 import android.animation.Animator;
 import android.animation.AnimatorListenerAdapter;
 import android.animation.AnimatorSet;
 import android.content.Context;
 import android.graphics.RectF;
+import android.os.Build;
+import android.view.View;
+import android.view.ViewGroup;
 
+import org.chromium.base.metrics.RecordHistogram;
+import org.chromium.build.annotations.NullMarked;
+import org.chromium.build.annotations.Nullable;
 import org.chromium.chrome.browser.browser_controls.BrowserControlsStateProvider;
 import org.chromium.chrome.browser.compositor.layouts.Layout;
 import org.chromium.chrome.browser.compositor.layouts.LayoutRenderHost;
@@ -17,31 +26,36 @@ import org.chromium.chrome.browser.compositor.layouts.LayoutUpdateHost;
 import org.chromium.chrome.browser.compositor.layouts.components.LayoutTab;
 import org.chromium.chrome.browser.compositor.layouts.eventfilter.BlackHoleEventFilter;
 import org.chromium.chrome.browser.compositor.scene_layer.TabListSceneLayer;
+import org.chromium.chrome.browser.flags.ChromeFeatureList;
 import org.chromium.chrome.browser.layouts.EventFilter;
 import org.chromium.chrome.browser.layouts.LayoutType;
 import org.chromium.chrome.browser.layouts.animation.CompositorAnimationHandler;
 import org.chromium.chrome.browser.layouts.animation.CompositorAnimator;
 import org.chromium.chrome.browser.layouts.scene_layer.SceneLayer;
 import org.chromium.chrome.browser.tab.Tab;
+import org.chromium.chrome.browser.tab.TabLaunchType;
 import org.chromium.chrome.browser.tab.TabSelectionType;
 import org.chromium.chrome.browser.tab_ui.TabContentManager;
 import org.chromium.chrome.browser.tabmodel.TabModel;
 import org.chromium.chrome.browser.tabmodel.TabModelUtils;
+import org.chromium.components.sensitive_content.SensitiveContentClient;
+import org.chromium.components.sensitive_content.SensitiveContentFeatures;
 import org.chromium.ui.interpolators.Interpolators;
 import org.chromium.ui.resources.ResourceManager;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collection;
-import java.util.LinkedList;
+import java.util.Collections;
+import java.util.List;
 
 /** This class handles animating the opening of new tabs. */
+@NullMarked
 public class SimpleAnimationLayout extends Layout {
     /** The animation for a tab being created in the foreground. */
-    private AnimatorSet mTabCreatedForegroundAnimation;
+    private @Nullable AnimatorSet mTabCreatedForegroundAnimation;
 
     /** The animation for a tab being created in the background. */
-    private AnimatorSet mTabCreatedBackgroundAnimation;
+    private @Nullable AnimatorSet mTabCreatedBackgroundAnimation;
 
     /** Fraction to scale tabs by during animation. */
     public static final float SCALE_FRACTION = 0.90f;
@@ -67,17 +81,25 @@ public class SimpleAnimationLayout extends Layout {
     // The tab to select on finishing the animation.
     private int mNextTabId;
 
+    private final ViewGroup mContentContainer;
+
     /**
      * Creates an instance of the {@link SimpleAnimationLayout}.
-     * @param context     The current Android's context.
-     * @param updateHost  The {@link LayoutUpdateHost} view for this layout.
-     * @param renderHost  The {@link LayoutRenderHost} view for this layout.
+     *
+     * @param context The current Android's context.
+     * @param updateHost The {@link LayoutUpdateHost} view for this layout.
+     * @param renderHost The {@link LayoutRenderHost} view for this layout.
+     * @param contentContainer The content container view.
      */
     public SimpleAnimationLayout(
-            Context context, LayoutUpdateHost updateHost, LayoutRenderHost renderHost) {
+            Context context,
+            LayoutUpdateHost updateHost,
+            LayoutRenderHost renderHost,
+            ViewGroup contentContainer) {
         super(context, updateHost, renderHost);
         mBlackHoleEventFilter = new BlackHoleEventFilter(context);
         mSceneLayer = new TabListSceneLayer();
+        mContentContainer = contentContainer;
     }
 
     @Override
@@ -87,8 +109,10 @@ public class SimpleAnimationLayout extends Layout {
 
     @Override
     public void doneHiding() {
-        TabModelUtils.selectTabById(mTabModelSelector, mNextTabId, TabSelectionType.FROM_USER);
+        TabModelUtils.selectTabById(
+                assertNonNull(mTabModelSelector), mNextTabId, TabSelectionType.FROM_USER);
         super.doneHiding();
+        updateContentContainerSensitivity(TabModel.INVALID_TAB_INDEX);
     }
 
     @Override
@@ -135,6 +159,7 @@ public class SimpleAnimationLayout extends Layout {
         forceAnimationToFinish();
 
         ensureSourceTabCreated(sourceTabId);
+        updateContentContainerSensitivity(sourceTabId);
     }
 
     private void ensureSourceTabCreated(int sourceTabId) {
@@ -144,13 +169,13 @@ public class SimpleAnimationLayout extends Layout {
             return;
         }
         // Just draw the source tab on the screen.
-        TabModel sourceModel = mTabModelSelector.getModelForTabId(sourceTabId);
+        TabModel sourceModel = assumeNonNull(mTabModelSelector).getModelForTabId(sourceTabId);
         if (sourceModel == null) return;
         LayoutTab sourceLayoutTab = createLayoutTab(sourceTabId, sourceModel.isIncognito());
         sourceLayoutTab.setBorderAlpha(0.0f);
 
         mLayoutTabs = new LayoutTab[] {sourceLayoutTab};
-        updateCacheVisibleIds(new LinkedList<Integer>(Arrays.asList(sourceTabId)));
+        updateCacheVisibleIds(Collections.singletonList(sourceTabId));
     }
 
     @Override
@@ -164,7 +189,21 @@ public class SimpleAnimationLayout extends Layout {
             float originX,
             float originY) {
         super.onTabCreated(time, id, index, sourceId, newIsIncognito, background, originX, originY);
+        if (mTabModelSelector != null) {
+            Tab tab = mTabModelSelector.getModel(newIsIncognito).getTabById(id);
+            if (tab != null
+                    && (tab.getLaunchType() == TabLaunchType.FROM_COLLABORATION_BACKGROUND_IN_GROUP
+                            || tab.getLaunchType() == TabLaunchType.FROM_TIPS_NOTIFICATIONS)) {
+                // Tab selection will no-op for Tab.INVALID_TAB_ID. This operation should not change
+                // the current tab. If for some reason this is the last tab it will be automatically
+                // selected.
+                mNextTabId = Tab.INVALID_TAB_ID;
+                startHiding();
+                return;
+            }
+        }
         ensureSourceTabCreated(sourceId);
+        updateContentContainerSensitivity(sourceId);
         if (background && mLayoutTabs != null && mLayoutTabs.length > 0) {
             tabCreatedInBackground(id, sourceId, newIsIncognito, originX, originY);
         } else {
@@ -189,10 +228,9 @@ public class SimpleAnimationLayout extends Layout {
         } else {
             mLayoutTabs = new LayoutTab[] {mLayoutTabs[0], newLayoutTab};
         }
-        updateCacheVisibleIds(new LinkedList<Integer>(Arrays.asList(id, sourceId)));
+        updateCacheVisibleIds(List.of(id, sourceId));
 
         newLayoutTab.setBorderAlpha(0.0f);
-        newLayoutTab.setStaticToViewBlend(1.f);
 
         forceAnimationToFinish();
 
@@ -238,7 +276,7 @@ public class SimpleAnimationLayout extends Layout {
                 scaleAnimation, alphaAnimation, xAnimation, yAnimation);
         mTabCreatedForegroundAnimation.start();
 
-        mTabModelSelector.selectModel(newIsIncognito);
+        assumeNonNull(mTabModelSelector).selectModel(newIsIncognito);
         mNextTabId = id;
         startHiding();
     }
@@ -258,10 +296,10 @@ public class SimpleAnimationLayout extends Layout {
             int id, int sourceId, boolean newIsIncognito, float originX, float originY) {
         LayoutTab newLayoutTab = createLayoutTab(id, newIsIncognito);
         // mLayoutTabs should already have the source tab from tabCreating().
-        assert mLayoutTabs.length == 1;
+        assert mLayoutTabs != null && mLayoutTabs.length == 1;
         LayoutTab sourceLayoutTab = mLayoutTabs[0];
         mLayoutTabs = new LayoutTab[] {sourceLayoutTab, newLayoutTab};
-        updateCacheVisibleIds(new LinkedList<Integer>(Arrays.asList(id, sourceId)));
+        updateCacheVisibleIds(List.of(id, sourceId));
 
         forceAnimationToFinish();
 
@@ -462,7 +500,48 @@ public class SimpleAnimationLayout extends Layout {
         mTabCreatedBackgroundAnimation.playSequentially(step1, step3);
         mTabCreatedBackgroundAnimation.start();
 
-        mTabModelSelector.selectModel(newIsIncognito);
+        assumeNonNull(mTabModelSelector).selectModel(newIsIncognito);
+    }
+
+    /**
+     * If the source tab is sensitive, it is used to mark the content container as sensitive before
+     * the new tab animation starts, and mark it as not sensitive after the new tab animation ends.
+     *
+     * @param sourceTabId The source tab id, if the intention is to attempt to mark the content
+     *     container as sensitive, or {@link TabModel.INVALID_TAB_INDEX}, if the intention is to
+     *     mark the content container as not sensitive.
+     */
+    private void updateContentContainerSensitivity(int sourceTabId) {
+        if (Build.VERSION.SDK_INT >= Build.VERSION_CODES.VANILLA_ICE_CREAM
+                && ChromeFeatureList.isEnabled(SensitiveContentFeatures.SENSITIVE_CONTENT)
+                && ChromeFeatureList.isEnabled(
+                        SensitiveContentFeatures.SENSITIVE_CONTENT_WHILE_SWITCHING_TABS)) {
+            if (sourceTabId != TabModel.INVALID_TAB_INDEX) {
+                // This code can be reached from both {@link SimpleAnimationLayout.onTabCreating}
+                // and {@link SimpleAnimationLayout.onTabCreated}. If the content container is
+                // already sensitive, there is no need to mark it as sensitive again.
+                if (mContentContainer.getContentSensitivity()
+                        == View.CONTENT_SENSITIVITY_SENSITIVE) {
+                    return;
+                }
+                TabModel sourceModel =
+                        assumeNonNull(mTabModelSelector).getModelForTabId(sourceTabId);
+                if (sourceModel == null) {
+                    return;
+                }
+                Tab tab = sourceModel.getTabById(sourceTabId);
+                if (tab == null || !tab.getTabHasSensitiveContent()) {
+                    return;
+                }
+                mContentContainer.setContentSensitivity(View.CONTENT_SENSITIVITY_SENSITIVE);
+                RecordHistogram.recordEnumeratedHistogram(
+                        "SensitiveContent.SensitiveTabSwitchingAnimations",
+                        SensitiveContentClient.TabSwitchingAnimation.NEW_TAB_IN_BACKGROUND,
+                        SensitiveContentClient.TabSwitchingAnimation.COUNT);
+            } else {
+                mContentContainer.setContentSensitivity(View.CONTENT_SENSITIVITY_NOT_SENSITIVE);
+            }
+        }
     }
 
     @Override
