@@ -4,17 +4,21 @@
 
 package org.chromium.chrome.browser.tabmodel;
 
-import androidx.annotation.Nullable;
-
 import com.google.errorprone.annotations.DoNotMock;
 
+import org.chromium.base.Token;
+import org.chromium.build.annotations.NullMarked;
+import org.chromium.build.annotations.Nullable;
 import org.chromium.chrome.browser.tab.Tab;
 
+import java.util.Arrays;
 import java.util.List;
 import java.util.Objects;
 
 /** Parameters to control closing tabs from the {@link TabModel}. */
+// TODO(crbug.com/376710475): Consider prefixing the static methods with for.
 @DoNotMock("Create a real instance instead.")
+@NullMarked
 public class TabClosureParams {
     /**
      * Returns a new {@link TabClosureParams.CloseTabBuilder} to instantiate {@link
@@ -33,6 +37,22 @@ public class TabClosureParams {
     }
 
     /**
+     * Creates a {@link TabClosureParams.CloseTabsBuilder} that represents a tab group.
+     *
+     * @param rootId The root ID of the tab group.
+     * @return A TabClosureParams for the tab group or null if the group is not found.
+     */
+    public static TabClosureParams.@Nullable CloseTabsBuilder forCloseTabGroup(
+            TabGroupModelFilter filter, @Nullable Token tabGroupId) {
+        List<Tab> relatedTabs = filter.getTabsInGroup(tabGroupId);
+        if (relatedTabs.isEmpty()) return null;
+
+        TabClosureParams.CloseTabsBuilder builder =
+                new TabClosureParams.CloseTabsBuilder(relatedTabs);
+        return builder.isTabGroup(true);
+    }
+
+    /**
      * Returns a new {@link TabClosureParams.CloseAllTabsBuilder} to instantiate {@link
      * TabClosureParams}.
      */
@@ -45,7 +65,9 @@ public class TabClosureParams {
         private final Tab mTab;
         private boolean mAllowUndo = true;
         private boolean mUponExit;
+        private @TabClosingSource int mTabClosingSource = TabClosingSource.UNKNOWN;
         private @Nullable Tab mRecommendedNextTab;
+        private @Nullable Runnable mUndoRunnable;
 
         private CloseTabBuilder(Tab tab) {
             mTab = tab;
@@ -69,17 +91,32 @@ public class TabClosureParams {
             return this;
         }
 
+        /** Set the tab closing source. Default is unknown. */
+        public CloseTabBuilder tabClosingSource(@TabClosingSource int tabClosingSource) {
+            mTabClosingSource = tabClosingSource;
+            return this;
+        }
+
+        /** Sets the undo runnable. */
+        public CloseTabBuilder withUndoRunnable(@Nullable Runnable undoRunnable) {
+            mUndoRunnable = undoRunnable;
+            return this;
+        }
+
         /** Builds the params. */
         public TabClosureParams build() {
             return new TabClosureParams(
-                    List.of(mTab),
+                    Arrays.asList(mTab),
                     /* isAllTabs= */ false,
                     mRecommendedNextTab,
                     mUponExit,
                     mAllowUndo,
                     /* hideTabGroups= */ false,
                     /* saveToTabRestoreService= */ true,
-                    TabCloseType.SINGLE);
+                    mTabClosingSource,
+                    TabCloseType.SINGLE,
+                    mUndoRunnable,
+                    /* isTabGroup= */ false);
         }
     }
 
@@ -89,6 +126,9 @@ public class TabClosureParams {
         private boolean mAllowUndo = true;
         private boolean mHideTabGroups;
         private boolean mSaveToTabRestoreService = true;
+        private boolean mIsTabGroup;
+        private @TabClosingSource int mTabClosingSource;
+        private @Nullable Runnable mUndoRunnable;
 
         private CloseTabsBuilder(List<Tab> tabs) {
             mTabs = tabs;
@@ -112,6 +152,30 @@ public class TabClosureParams {
             return this;
         }
 
+        /** Set the tab closing source. Default is unknown. */
+        public CloseTabsBuilder tabClosingSource(@TabClosingSource int tabClosingSource) {
+            mTabClosingSource = tabClosingSource;
+            return this;
+        }
+
+        /** Sets the undo runnable. */
+        public CloseTabsBuilder withUndoRunnable(@Nullable Runnable undoRunnable) {
+            mUndoRunnable = undoRunnable;
+            return this;
+        }
+
+        /**
+         * Sets whether the closure is for a tab group and came from {@link forCloseTabGroup}. This
+         * is used to identify if the tab closure is for an entire tab group. It is currently used
+         * by {@link TabRemover} to decide which type of dialog to show. It may have other uses in
+         * the future such as ensuring all tabs in a group are closed even if the close operation is
+         * deferred.
+         */
+        private CloseTabsBuilder isTabGroup(boolean isTabGroup) {
+            mIsTabGroup = isTabGroup;
+            return this;
+        }
+
         /** Builds the params. */
         public TabClosureParams build() {
             return new TabClosureParams(
@@ -122,17 +186,20 @@ public class TabClosureParams {
                     mAllowUndo,
                     mHideTabGroups,
                     mSaveToTabRestoreService,
-                    TabCloseType.MULTIPLE);
+                    mTabClosingSource,
+                    TabCloseType.MULTIPLE,
+                    mUndoRunnable,
+                    mIsTabGroup);
         }
     }
 
-    /**
-     * Builder to configure params for closing all tabs. Closing all tabs always allows for undo if
-     * permitted by the tab model.
-     */
+    /** Builder to configure params for closing all tabs. */
     public static class CloseAllTabsBuilder {
         private boolean mUponExit;
+        private boolean mAllowUndo = true;
         private boolean mHideTabGroups;
+        private @TabClosingSource int mTabClosingSource = TabClosingSource.UNKNOWN;
+        private @Nullable Runnable mUndoRunnable;
 
         private CloseAllTabsBuilder() {}
 
@@ -142,9 +209,27 @@ public class TabClosureParams {
             return this;
         }
 
+        /** Set whether to allow undo. Default is true. */
+        public CloseAllTabsBuilder allowUndo(boolean allowUndo) {
+            mAllowUndo = allowUndo;
+            return this;
+        }
+
         /** Set whether to hide or delete tab groups. Default is delete. */
         public CloseAllTabsBuilder hideTabGroups(boolean hideTabGroups) {
             mHideTabGroups = hideTabGroups;
+            return this;
+        }
+
+        /** Set the tab closing source. Default is unknown. */
+        public CloseAllTabsBuilder tabClosingSource(@TabClosingSource int tabClosingSource) {
+            mTabClosingSource = tabClosingSource;
+            return this;
+        }
+
+        /** Sets the undo runnable. */
+        public CloseAllTabsBuilder withUndoRunnable(@Nullable Runnable undoRunnable) {
+            mUndoRunnable = undoRunnable;
             return this;
         }
 
@@ -155,10 +240,13 @@ public class TabClosureParams {
                     /* isAllTabs= */ true,
                     /* recommendedNextTab= */ null,
                     mUponExit,
-                    /* allowUndo= */ true,
+                    mAllowUndo,
                     mHideTabGroups,
                     /* saveToTabRestoreService= */ true,
-                    TabCloseType.ALL);
+                    mTabClosingSource,
+                    TabCloseType.ALL,
+                    mUndoRunnable,
+                    /* isTabGroup= */ false);
         }
     }
 
@@ -171,7 +259,10 @@ public class TabClosureParams {
     public final boolean allowUndo;
     public final boolean hideTabGroups;
     public final boolean saveToTabRestoreService;
+    public final @TabClosingSource int tabClosingSource;
     public final @TabCloseType int tabCloseType;
+    public final @Nullable Runnable undoRunnable;
+    public final boolean isTabGroup;
 
     private TabClosureParams(
             @Nullable List<Tab> tabs,
@@ -181,7 +272,10 @@ public class TabClosureParams {
             boolean allowUndo,
             boolean hideTabGroups,
             boolean saveToTabRestoreService,
-            @TabCloseType int tabCloseType) {
+            @TabClosingSource int tabClosingSource,
+            @TabCloseType int tabCloseType,
+            @Nullable Runnable undoRunnable,
+            boolean isTabGroup) {
         this.tabs = tabs;
         this.isAllTabs = isAllTabs;
         this.recommendedNextTab = recommendedNextTab;
@@ -189,7 +283,10 @@ public class TabClosureParams {
         this.allowUndo = allowUndo;
         this.hideTabGroups = hideTabGroups;
         this.saveToTabRestoreService = saveToTabRestoreService;
+        this.tabClosingSource = tabClosingSource;
         this.tabCloseType = tabCloseType;
+        this.undoRunnable = undoRunnable;
+        this.isTabGroup = isTabGroup;
     }
 
     @Override
@@ -204,7 +301,10 @@ public class TabClosureParams {
                     && this.allowUndo == otherParams.allowUndo
                     && this.hideTabGroups == otherParams.hideTabGroups
                     && this.saveToTabRestoreService == otherParams.saveToTabRestoreService
-                    && this.tabCloseType == otherParams.tabCloseType;
+                    && this.tabClosingSource == otherParams.tabClosingSource
+                    && this.tabCloseType == otherParams.tabCloseType
+                    && Objects.equals(this.undoRunnable, otherParams.undoRunnable)
+                    && this.isTabGroup == otherParams.isTabGroup;
         }
         return false;
     }
@@ -219,6 +319,35 @@ public class TabClosureParams {
                 this.allowUndo,
                 this.hideTabGroups,
                 this.saveToTabRestoreService,
-                this.tabCloseType);
+                this.tabClosingSource,
+                this.tabCloseType,
+                this.undoRunnable,
+                this.isTabGroup);
+    }
+
+    @Override
+    public String toString() {
+        return "tabs "
+                + this.tabs
+                + "\nisAllTabs "
+                + this.isAllTabs
+                + "\nrecommendedNextTab "
+                + this.recommendedNextTab
+                + "\nuponExit "
+                + this.uponExit
+                + "\nallowUndo "
+                + this.allowUndo
+                + "\nhideTabGroups "
+                + this.hideTabGroups
+                + "\nsaveToTabRestoreService "
+                + this.saveToTabRestoreService
+                + "\ntabClosingSource "
+                + this.tabClosingSource
+                + "\ntabCloseType "
+                + this.tabCloseType
+                + "\nundoRunnable "
+                + this.undoRunnable
+                + "\nisTabGroup "
+                + this.isTabGroup;
     }
 }
